# biosignalml-python

./: .gitignore  FUTURE.rst  HISTORY  INSTALL  LICENSE.rst  README  README.rst  RELEASE.rst  UPGRADE.rst  __init__.py  data.py  ontology.py  pyproject.toml  setup.py  timeline.py
biosignalml/: __init__.py  ontology.py
biosignalml/client/: __init__.py  repository.py
biosignalml/data/: __init__.py  convert.py  time.py
biosignalml/formats/: __init__.py
biosignalml/model/: __init__.py  annotation.py  core.py  event.py  mapping.py  ontology.py  recording.py  segment.py  signal.py
biosignalml/rdf/: __init__.py  namespaces.py  sparqlstore.py
biosignalml/repository/: __init__.py  graphstore.py
biosignalml/tests.rdf/: test.ttl
bsml/: __init__.py
client/: __init__.py  repository.py
data/: __init__.py  time.py
doc/: .gitignore  Makefile  biosignalml.rst  classes.rst  conf.py  extract_latex.py  index.rst  make.bat  make_thesis_doc.sh  makedoc.sh
fileformats/: __init__.py
formats/: __init__.py
metadata/: __init__.py
model/: __init__.py  abstraction.py  core.py  data.py  mapping.py  mapping.ttl  ontology.py  timeline.py
rdf/: __init__.py  formats.py  fourstore.py  sparqlstore.py  triplestore.py
rdfmodel/: __init__.py  turtle.py
repository/: .gitignore  __init__.py  fourstore.py  fulltext.py  graphstore.py  provenance.py  schema.sql  triplestore.c  triplestore.h  triplestore.py
transports/: __init__.py  stream.py  websockets.py
units/: __init__.py  convert.py  ontology.py
utils/: __init__.py  arith.py  config.py  params.py  turtle.py
(+82 files in other folders)
