[tool.poetry]
name = "biosignalml"
version = "0.7.1-a.2"
description = ""
authors = ["David Brooks <d.brooks@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
isodate = "^0.6.1"
pyparsing = "^3.1.1"
httplib2 = "^0.22.0"
python-dateutil = "^2.8.2"
ws4py = "^0.5.1"
rdflib = "^7.0.0"
pint = "^0.22"
numpy = "^1.25.2"
h5py = "^3.9.0"
simplejson = "^3.19.1"
samplerate2 = "^0.0.2"
wfdb = "^4.1.2"
[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
furo = "^2024.8.6"
sphinx-autoapi = "^3.4.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
